# autoconf_learning

./: .gitignore  configure.ac
src/: Makefile.am  main.c  money.c  money.h
tests/: Makefile.am  test_money.c
